we are back with 4.0

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -6,6 +6,9 @@ pagination.pagerSize = 5
 [markup.goldmark.renderer]
   unsafe = true
 
+[markup.goldmark.renderer]
+  unsafe = true
+
 [params]
   contentTypeName = "posts"
   showMenuItems = 2
